# mlir-cookiecutter

./: CMakeLists.txt  LICENSE  README.md  cookiecutter.json
include/: CMakeLists.txt
include/{{ cookiecutter.dialect_name_upper }}/: {{ cookiecutter.dialect_name_upper }}Dialect.h  {{ cookiecutter.dialect_name_upper }}Dialect.td
lib/{{ cookiecutter.dialect_name_upper }}/: CMakeLists.txt  {{ cookiecutter.dialect_name_upper }}Dialect.cpp
test/: lit.cfg.py
{{ cookiecutter.dialect_name }}/: CMakeLists.txt
{{ cookiecutter.dialect_name }}-opt/: {{ cookiecutter.dialect_name }}-opt.cpp
{{ cookiecutter.dialect_name }}/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.dialect_name }}/.github/workflows/: build-and-test.yml
{{ cookiecutter.dialect_name }}/include/{{ cookiecutter.dialect_name_upper }}/: CMakeLists.txt  {{ cookiecutter.dialect_name_upper }}Dialect.h  {{ cookiecutter.dialect_name_upper }}Dialect.td  {{ cookiecutter.dialect_name_upper }}Ops.h  {{ cookiecutter.dialect_name_upper }}Ops.td
{{ cookiecutter.dialect_name }}/lib/{{ cookiecutter.dialect_name_upper }}/: {{ cookiecutter.dialect_name_upper }}Dialect.cpp  {{ cookiecutter.dialect_name_upper }}Ops.cpp
{{ cookiecutter.dialect_name }}/test/: CMakeLists.txt  lit.site.cfg.py.in
{{ cookiecutter.dialect_name }}/test/{{ cookiecutter.dialect_name_upper }}/: dummy.mlir
{{ cookiecutter.dialect_name }}/{{ cookiecutter.dialect_name }}-opt/: CMakeLists.txt  {{ cookiecutter.dialect_name }}-opt.cpp
